# ams-srv

./: .gitignore  AMS-SRV-8.files  AUTHORS  CHANGELOG  CMakeLists.txt  README  TODO
doc/: firebird.txt  init.fb  isoftrepo.xml  stat.xml
etc/: CMakeLists.txt
etc/init/: isoftrepo.conf  isoftstat.conf
etc/servers/: CMakeLists.txt  isoftrepo.xml  stat.xml
share/systemd/: ams-isoftrepo.service  ams-isoftstat.service
src/: CMakeLists.txt
src/sbin/: CMakeLists.txt
src/sbin/ams-isoftrepo/: CMakeLists.txt  ISoftRepoOptions.cpp  ISoftRepoOptions.hpp  ISoftRepoServer.cpp  ISoftRepoServer.hpp  _Build.cpp  _Error.cpp  _ListCategories.cpp  _ListSites.cpp  _Module.cpp  _Search.cpp  _SearchSite.cpp  _SearchSites.cpp  _SiteInfo.cpp  _Version.cpp
src/sbin/ams-isoftstat/: AMSStatServer.cpp  AMSStatServer.hpp  AMSStatServerOptions.cpp  AMSStatServerOptions.hpp  CMakeLists.txt  ams-stat-server.cpp
var/: CMakeLists.txt
var/html/: CMakeLists.txt
var/html/isoftrepo/: CMakeLists.txt
var/html/isoftrepo/scripts/: collapse.js
var/html/isoftrepo/styles/: main.css
var/html/isoftrepo/templates/: Build.html  Error.html  ListCategories.html  ListSites.html  Module.html  SearchSite.html  SearchSites.html  SiteInfo.html  Version.html
