# ==============================================================================
# Advanced Module System (AMS) CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(html)
